--- a/index.html
+++ b/index.html
@@ -34,15 +34,27 @@
             src="https://avatars.githubusercontent.com/u/65674550?v=4"
           />
           <p class="name-text">André Negrelli</p>
-          <small class="region-text">Curitiba, Brazil</small>
-          <p class="quote-text"
-            > "Front-end developer, games enthusiast" </p>
+          <small class="region-text">Brazil</small>
+          <p class="quote-text">"Front-end developer, games enthusiast"</p>
         </div>
         <div class="links">
-          <button class="button"></button>
-          <button class="button"></button>
-          <button class="button"></button>
-          <button class="button"></button>
+          <a
+            href="https://github.com/AndreNegrelli"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <button class="button">Github</button>
+          </a>
+          <a
+            href="https://www.frontendmentor.io/profile/AndreNegrelli"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <button class="button">Frontend Mentor</button>
+          </a>
+          <a href="https://www.linkedin.com/in/andre-negrelli/" target="_blank" rel="noopener noreferrer">
+            <button class="button" href="">Linkedin</button></a
+          >
         </div>
       </div>
     </div>
