alt text on img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="information">
           <img
             class="image"
-            src="https://avatars.githubusercontent.com/u/65674550?v=4"
+            src="https://avatars.githubusercontent.com/u/65674550?v=4" alt="git image: Andre Negrelli"
           />
           <p class="name-text">André Negrelli</p>
           <small class="region-text">Brazil</small>
@@ -52,7 +52,7 @@
           >
             <button class="button">Frontend Mentor</button>
           </a>
-          <a href="https://www.linkedin.com/in/andre-negrelli/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/andre-negrelli/"target="_blank" rel="noopener noreferrer">
             <button class="button" href="">Linkedin</button></a
           >
         </div>
